# MicroHs

./: .envrc  .gitattributes  .gitignore  .gitmodules  .hlint.yaml  A.hs  Bug394.hs  CNAME  Cargo.toml  Compile.hs  Desugar.hs  Example.hs  Exp.hs  IO.uhs  LICENSE  Lam.hs  List.uhs  Main.hs  Makefile  Makefile.emscripten  Makefile.old  Makefile.packages  Makefile.windows  MicroHs.cabal  PROGRESS.md  Parse.hs  ParserComb.hs  Prelude.uhs  README.md  RELEASE-v0.15.0.0.md  RELEASE-v0.16.0.0.md  RELEASE-v0.17.0.0.md  String.uhs  T.hs  TODO  Test.hs  WISHLIST.md  action.yml  appveyor.yml  bw.c  (+9 more)
STM32/: Blinky.c  Blinky.hs  Makefile
Tools/: Addcombs.hs  Compress.hs  Count.hs  Decompress.hs  Install.hs  Rewrite.hs  Stats.hs  Uncomb.hs  convertY.sh  machdep.c  mhsc.sh
bench/: Bench.hs  NOTES.md  final.sh  flags.sh  pgo.sh  qvalidate.sh  remeasure.sh  run.sh  validate.sh
comb/: mhs.comb  simple.comb
cpphscompat/: TimeCompat.hs
ghc/: Compat.hs  MHSPrelude.hs  MhsEval.hs  PrimFromInteger.hs  PrimTable.hs  Primitives.hs
hugs/: Compat.hs  MHSPrelude.hs  Main.hs  MhsEval.hs  MiniPrelude.hs  PrimTable.hs
lib/: AllOfLib.hs  Compat.hs  Foreign.hs  IO.hs  List.hs  List.uhs  MiniPrelude.hs  Numeric.hs  Prelude.hs  PreludeNoIO.hs  PrimTable.hs  Primitives.hs  String.hs  base.cabal  libs.cabal
lib/Control/: Alternative.hs  Applicative.hs  Arrow.hs  Category.hs  Concurrent.hs  DeepSeq.hs  Error.hs  Error.hs-boot  Exception.hs  Exn.hs  Monad.hs  WrappedMonad.hs  WrappedMonad.hs-boot
lib/Control/Concurrent/: Chan.hs  MVar.hs  QSem.hs  STM.hs
lib/Control/Concurrent/STM/: Internal.hs  STMMonad.hs  TBQueue.hs  TChan.hs  TMVar.hs  TQueue.hs  TVar.hs
lib/Control/Concurrent/STM/Internal/: Map.hs  Set.hs  TVar.hs  TransactionLog.hs
lib/Control/DeepSeq/: Class.hs
lib/Control/Exception/: Base.hs  Core.hs  Internal.hs
lib/Control/Monad/: Fail.hs  Fix.hs  Fix.hs-boot  ST.hs  STM.hs  ST_Type.hs  State.hs  Zip.hs
lib/Control/Monad/IO/: Class.hs
lib/Control/Monad/ST/: Lazy.hs  Strict.hs  Unsafe.hs
lib/Control/Monad/ST/Lazy/: Unsafe.hs
lib/Control/Monad/State/: Strict.hs
lib/Data/: Any.hs  Array.hs  Bifoldable.hs  Bifunctor.hs  Bitraversable.hs  Bits.hs  Bool.hs  Bool_Type.hs  Bounded.hs  ByteString.hs  Char.hs  Char_Type.hs  Coerce.hs  Complex.hs  Constraint.hs  Data.hs  Data_Class.hs  Double.hs  Dynamic.hs  Either.hs  Enum.hs  Enum_Class.hs  Eq.hs  Fixed.hs  Float.hs  FloatW.hs  Floating.hs  Foldable.hs  Foldable1.hs  Fractional.hs  Function.hs  Functor.hs  Hashable.hs  IOArray.hs  IORef.hs  Identity.hs  Int.hs  IntMap.hs  IntSet.hs  Integer.hs  (+39 more)
lib/Data/Array/: Byte.hs  IArray.hs  IArray_Class.hs  IO.hs  Internal.hs  IxInternal.hs  MArray.hs  MArray_Class.hs  ST.hs  ST_Type.hs  Unboxed.hs
lib/Data/Bits/: Base.hs
lib/Data/ByteString/: Builder.hs  Char8.hs  Internal.hs  Lazy.hs  Short.hs  Unsafe.hs
lib/Data/ByteString/Builder/: ASCII.hs  Extra.hs  Internal.hs  RealFloat.hs
lib/Data/ByteString/Lazy/: Char8.hs  Internal.hs
lib/Data/ByteString/Short/: Internal.hs
lib/Data/Char/: Unicode.hs  Unicode.hs-boot
lib/Data/Foldable/: Internal.hs
lib/Data/Functor/: Classes.hs  Compose.hs  Const.hs  Const_Type.hs  Contravariant.hs  Identity.hs  Product.hs  Sum.hs
lib/Data/Hashable/: Class.hs  Lifted.hs
lib/Data/Int/: Instances.hs  Int.hs  Int16.hs  Int32.hs  Int64.hs  Int8.hs  IntN.hs
lib/Data/Integer/: Internal.hs
lib/Data/List/: NonEmpty.hs  NonEmpty_Type.hs
lib/Data/Monoid/: Internal.hs
lib/Data/STRef/: Lazy.hs  Strict.hs
lib/Data/String/: Interpolate.hs
lib/Data/String/Interpolate/: Basic.hs  ShowS.hs
lib/Data/Text/: Encoding.hs  IO.hs  Internal.hs  Lazy.hs
lib/Data/Text/Lazy/: Builder.hs  IO.hs
lib/Data/Time/: Clock.hs
lib/Data/Tuple/: Instances.hs
lib/Data/Type/: Coercion.hs  Equality.hs
lib/Data/Word/: Word.hs  Word16.hs  Word32.hs  Word64.hs  Word8.hs
lib/Debug/: Trace.hs
lib/Foreign/: ForeignPtr.hs  ForeignPtr_Type.hs  Marshal.hs  Ptr.hs  StablePtr.hs  Storable.hs
lib/Foreign/C/: ConstPtr.hs  Error.hs  String.hs  Types.hs
lib/Foreign/ForeignPtr/: Unsafe.hs
lib/Foreign/Marshal/: Alloc.hs  Array.hs  Error.hs  Utils.hs
lib/GHC/: Conc.hs  Exts.hs  Generics.hs  Stack.hs  Types.hs
lib/GHC/Conc/: Sync.hs
lib/Language/Haskell/TH/: Quote.hs  Syntax.hs
lib/Math/NumberTheory/: Logarithms.hs
lib/Mhs/: Arr.hs  Array.hs  Builtin.hs  JavaScript.hs  MutArr.hs  MutUArr.hs  UArr.hs
lib/Numeric/: FormatFloat.hs  FormatFloat.hs-boot  Natural.hs  Read.hs  Show.hs
lib/System/: CPUTime.hs  Cmd.hs  Compress.hs  Directory.hs  Environment.hs  Exit.hs  IO.hs  IO_Handle.hs  Info.hs  Mem.hs  Process.hs  RTS.hs  Timeout.hs
lib/System/Compress/: ByteString.hs
lib/System/Console/: GetOpt.hs  SimpleReadline.hs
lib/System/IO/: Base.hs  Error.hs  FD.hs  Internal.hs  MD5.hs  Open.hs  PrintOrRun.hs  Serialize.hs  StringHandle.hs  Temp.hs  TimeMicro.hs  TimeMilli.hs  Transducers.hs  Unsafe.hs
lib/System/Mem/: Weak.hs
lib/System/Posix/: Types.hs
lib/Text/: Printf.hs  Read.hs  Read_Class.hs  Show.hs  String.hs
lib/Text/ParserCombinators/: ReadP.hs  ReadPrec.hs
lib/Text/PrettyPrint/: HughesPJ.hs  HughesPJClass.hs
lib/Text/Read/: Internal.hs  Internal.hs-boot  Lex.hs  Lexeme.hs  Numeric.hs  OldLex.hs
lib/Unsafe/: Coerce.hs
lib/gmp/Data/: Integer_Type.hs
lib/gmp/Data/Integer/: Internal.hs
lib/no-gmp/Data/: Integer_Type.hs
lib/simple-readline/System/Console/: SimpleReadline.hs
mhs/: Compat.hs  MHSPrelude.hs  PrimTable.hs
paths/: Paths_MicroHs.hs
rust/: README.md
src/: Compat.hs  CompatIO.hs  PreludeNoIO.hs  PrimTable.hs
tests/: ApplySP.hs  ApplySP.ref  Arith.hs  Arith.ref  Arith64.hs  Arith64.ref  Array.hs  Bang.hs  Base64.hs  BindPat.hs  BitCount.hs  BitCount.ref  Builder.hs  Builder.ref  ByteArray.hs  ByteArray.ref  ByteStringIO.hs  ByteStringLow.hs  ByteStringLow.ref  Bytestring.hs  Bytestring.ref  Callback.hs  Callback.ref  Case.hs  Case.ref  Catch.hs  Catch.ref  Class.hs  Coerce.hs  Coerce.ref  Con.hs  Con.ref  Concur.hs  Concur.ref  DArith.hs  DArith.ref  DataData.hs  DataData.ref  Default.hs  Default.ref  (+166 more)
(+168 files in other folders)
