cabal-version:       3.0
name:                MicroHs
version:             0.10.3.0
                     -- *** When changing the version number, also
                     -- *** run 'sh updateversion.sh'
                     -- *** Yeah, it stinks.
synopsis:            A small compiler for Haskell
license:             Apache-2.0
license-file:        LICENSE
copyright:           2023,2024 Lennart Augustsson
category:            language
author:              lennart@augustsson.net
maintainer:          lennart@augustsson.net
stability:           experimental
description:         A compiler for an extended subset of Haskell-2010.
                     The compiler translates to combinators and can compile itself.
build-type:          Simple

extra-source-files:
      LICENSE
      Example.hs
      Makefile
      README.md
      Tools/convertX.sh
      Tools/Addcombs.hs
      Tools/Compress.hs
      generated/mhs.c
      generated/cpphs.c
      ghc/**/*.hs
      lib/**/*.hs
      lib/**/*.hs-boot
      mhs/**/*.hs
      paths/Paths_MicroHs.hs
      src/runtime/*.c
      src/runtime/*.h
      tests/Makefile
      tests/*.hs
      tests/*.hs-boot
      tests/*.ref

data-files:
      src/runtime/*.c
      src/runtime/*.h

-- Cabal doesn't seem to understand this, so it never copies
-- these files.
--if impl(ghc)
--  data-files:
      lib/**/*.hs
      lib/**/*.hs-boot

source-repository head
    type:     git
    location: https://github.com/augustss/MicroHs

executable mhs
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-unrecognised-warning-flags -Wno-x-partial -main-is MicroHs.Main
                       -fwrite-ide-info -Wno-deprecations
  main-is:             MicroHs/Main.hs
  default-extensions:  ScopedTypeVariables TypeSynonymInstances MultiParamTypeClasses
                       FlexibleInstances BangPatterns
  other-modules:       MicroHs.Abstract
                       MicroHs.Compile
                       MicroHs.CompileCache
                       MicroHs.Deriving
                       MicroHs.Desugar
                       MicroHs.EncodeData
                       MicroHs.Exp
                       MicroHs.ExpPrint
                       MicroHs.Expr
                       MicroHs.FFI
                       MicroHs.Flags
                       MicroHs.Fixity
                       MicroHs.Graph
                       MicroHs.Ident
                       MicroHs.IdentMap
                       MicroHs.IntMap
                       MicroHs.IntSet
                       MicroHs.Instances
                       MicroHs.Interactive
                       MicroHs.Lex
                       MicroHs.List
                       MicroHs.MakeCArray
                       MicroHs.Package
                       MicroHs.Parse
                       MicroHs.State
                       MicroHs.StateIO
                       MicroHs.SymTab
                       MicroHs.TCMonad
                       MicroHs.Translate
                       MicroHs.TypeCheck
                       MicroHs.TargetConfig
                       Text.ParserComb
                       Text.PrettyPrint.HughesPJLite
                       System.Console.SimpleReadline
                       Data.Double
                       Data.Integer
                       Compat
                       PrimTable
                       MHSPrelude
                       System.IO.MD5
                       System.IO.Serialize
                       System.IO.TimeMilli
                       System.Compress
                       Paths_MicroHs
  autogen-modules:     Paths_MicroHs
  if impl(ghc)
    hs-source-dirs:    ghc src
    build-depends:     base         >= 4.10 && < 4.22,
                       deepseq      >= 1.1 && < 1.6,
                       ghc-prim     >= 0.5 && < 0.12,
                       haskeline    >= 0.8 && < 0.9,
                       time         >= 1.1 && < 1.15,
                       process      >= 1.6 && < 1.8,
                       directory    >= 1.2 && < 1.5,
                       text         >= 2.0 && < 2.3,

-- Hackage does not accept 'mhs' as a valid Haskell compiler,
-- so mcabal has a hack to recognize lines that start with
-- '--MHS' as non-comments.
--MHS  if impl(mhs)
--MHS    hs-source-dirs:    mhs src paths
--MHS    build-depends:     base         >= 0.1 && < 10.0,
