cabal-version:       3.0
name:                MicroHs
version:             0.12.4.0
                     -- *** When changing the version number, also
                     -- *** run 'sh updateversion.sh'
                     -- *** Yeah, it stinks.
synopsis:            A small compiler for Haskell
license:             Apache-2.0
license-file:        LICENSE
copyright:           2023,2024,2025 Lennart Augustsson
category:            language
author:              lennart@augustsson.net
maintainer:          lennart@augustsson.net
stability:           experimental
description:         A compiler for an extended subset of Haskell-2010.
                     The compiler translates to combinators and can compile itself.
build-type:          Simple

extra-source-files:
      LICENSE
      Example.hs
      Makefile
      README.md
      Tools/convertX.sh
      Tools/Addcombs.hs
      Tools/Compress.hs
      generated/mhs.c
      generated/cpphs.c
      ghc/**/*.hs
      lib/**/*.hs
      lib/**/*.hs-boot
      mhs/**/*.hs
      paths/Paths_MicroHs.hs
      src/runtime/*.c
      src/runtime/*.h
      tests/Makefile
      tests/*.hs
      tests/*.hs-boot
      tests/*.ref

data-files:
      src/runtime/*.c
      src/runtime/*.h
-- I would like to have these two only for ghc, but I can't figure out how.
-- But mcabal has a hack that recognizes lines that start with --MCABAL as valid lines.
--MCABALif impl(ghc)
--MCABAL data-files:
      lib/**/*.hs
      lib/**/*.hs-boot

source-repository head
    type:     git
    location: https://github.com/augustss/MicroHs

executable mhs
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-unrecognised-warning-flags -Wno-x-partial
                       -fwrite-ide-info -Wno-deprecations
                       -main-is MicroHs.Main
  main-is:             MicroHs/Main.hs
  default-extensions:  ScopedTypeVariables TypeSynonymInstances MultiParamTypeClasses FlexibleInstances
  other-modules:       MicroHs.Abstract
                       MicroHs.Builtin
                       MicroHs.Compile
                       MicroHs.CompileCache
                       MicroHs.Deriving
                       MicroHs.Desugar
                       MicroHs.EncodeData
                       MicroHs.Exp
                       MicroHs.ExpPrint
                       MicroHs.Expr
                       MicroHs.FFI
                       MicroHs.Flags
                       MicroHs.Fixity
                       MicroHs.Graph
                       MicroHs.Ident
                       MicroHs.IdentMap
                       MicroHs.IntMap
                       MicroHs.IntSet
                       MicroHs.Interactive
                       MicroHs.Lex
                       MicroHs.List
                       MicroHs.Names
                       MicroHs.MakeCArray
                       MicroHs.Package
                       MicroHs.Parse
                       MicroHs.State
                       MicroHs.StateIO
                       MicroHs.SymTab
                       MicroHs.TCMonad
                       MicroHs.Translate
                       MicroHs.TypeCheck
                       MicroHs.TargetConfig
                       Text.ParserComb
                       Text.PrettyPrint.HughesPJLite
                       System.Console.SimpleReadline
                       Data.Double
                       Data.Integer
                       PrimTable
                       MHSPrelude
                       System.IO.MD5
                       System.IO.Serialize
                       System.IO.TimeMilli
                       System.Compress
                       Paths_MicroHs
  autogen-modules:     Paths_MicroHs
  if impl(ghc)
    hs-source-dirs:    ghc src
    build-depends:     base         >= 4.10 && < 4.30,
                       bytestring   >= 0.5 && < 0.20,
                       deepseq      >= 1.1 && < 1.8,
                       filepath     >= 1.1 && < 1.8,
                       ghc-prim     >= 0.5 && < 0.15,
                       haskeline    >= 0.8 && < 0.10,
                       time         >= 1.1 && < 1.20,
                       process      >= 1.6 && < 1.10,
                       directory    >= 1.2 && < 1.6,
                       text         >= 2.0 && < 2.5,

  if impl(hugs)
    hs-source-dirs:    hugs src

  if impl(mhs)
    hs-source-dirs:    mhs src
    build-depends:     base         >= 0.1 && < 10.0,

