cabal-version:  3.0
name:           base
version:        0.15.0.0
license:        Apache-2.0
license-file:   LICENSE
maintainer:     lennart@augustsson.net
synopsis:       Basic libraries
category:       Prelude
build-type:     Simple
description:
    This package contains the Standard Haskell "Prelude" and its support libraries.

flag gmp
  description: Use GMP for Integer
  default: False
  manual: True

library base
    if flag(gmp)
      hs-source-dirs: gmp .
    else
      hs-source-dirs: .
    exposed-modules:
        Control.Applicative
        Control.Arrow
        Control.Category
        Control.Concurrent
        Control.Concurrent.Chan
        Control.Concurrent.MVar
        Control.Concurrent.QSem
        Control.Concurrent.QSemN
        Control.Concurrent.STM
        Control.Concurrent.STM.TVar
        Control.Concurrent.STM.TMVar
        Control.Concurrent.STM.TChan
        Control.Concurrent.STM.TQueue
        Control.Concurrent.STM.TBQueue
        Control.DeepSeq
        Control.DeepSeq.Class
        Control.Error
        Control.Exception
        Control.Exception.Base
        Control.Monad
        Control.Monad.Fail
        Control.Monad.Fix
        Control.Monad.IO.Class
        Control.Monad.ST
        Control.Monad.ST.Unsafe
        Control.Monad.STM
        Control.Monad.Zip
        Control.WrappedMonad
        Data.Array.Byte
        Data.Bifoldable
        Data.Bifoldable1
        Data.Bifunctor
        Data.Bitraversable
        Data.Bits
        Data.Bool
        Data.Bounded
        Data.ByteString
        Data.ByteString.Builder
        Data.ByteString.Builder.Extra
        Data.ByteString.Builder.RealFloat
        Data.ByteString.Char8
        Data.ByteString.Lazy
        Data.ByteString.Lazy.Char8
        Data.ByteString.Short
        Data.ByteString.Short.Internal
        Data.ByteString.Unsafe
        Data.Char
        Data.Char.Unicode
        Data.Coerce
        Data.Complex
        Data.Constraint
        Data.Data
        Data.Double
        Data.Dynamic
        Data.Either
        Data.Enum
        Data.Enum_Class
        Data.Eq
        Data.Fixed
        Data.Float
        Data.Float
        Data.Floating
        Data.Foldable
        Data.Foldable1
        Data.Fractional
        Data.Function
        Data.Functor
        Data.Functor.Classes
        Data.Functor.Compose
        Data.Functor.Const
        Data.Functor.Contravariant
        Data.Functor.Identity
        Data.Functor.Product
        Data.Functor.Sum
        Data.Hashable
        Data.Hashable.Class
        Data.Hashable.Lifted
        Data.IORef
        Data.Int
        Data.Int.Int
        Data.Int.Int8
        Data.Int.Int16
        Data.Int.Int32
        Data.Int.Int64
        Data.Integer
        Data.Integral
        Data.Ix
        Data.Kind
        Data.List
        Data.List.NonEmpty
        Data.Maybe
        Data.Monoid
        Data.Num
        Data.Ord
        Data.Proxy
        Data.Ratio
        Data.Real
        Data.RealFloat
        Data.RealFrac
        Data.Records
        Data.STRef
        Data.Semigroup
        Data.String
        Data.Text
        Data.Text.Encoding
        Data.Text.IO
        Data.Text.Lazy
        Data.Text.Lazy.Builder
        Data.Text.Lazy.IO
        Data.Traversable
        Data.Tuple
        Data.Tuple.Instances
        Data.Type.Coercion
        Data.Type.Equality
        Data.TypeLits
        Data.Typeable
        Data.Unique
        Data.Version
        Data.Void
        Data.Word
        Data.Word.Word
        Data.Word.Word8
        Data.Word.Word16
        Data.Word.Word32
        Data.Word.Word64
        Data.ZipList
        Debug.Trace
        Foreign
        Foreign.C
        Foreign.C.ConstPtr
        Foreign.C.Error
        Foreign.C.String
        Foreign.C.Types
        Foreign.ForeignPtr
        Foreign.ForeignPtr.Unsafe
        Foreign.Marshal
        Foreign.Marshal.Alloc
        Foreign.Marshal.Array
        Foreign.Marshal.Error
        Foreign.Marshal.Utils
        Foreign.Ptr
        Foreign.StablePtr
        Foreign.Storable
        GHC.Generics
        Math.NumberTheory.Logarithms
        Mhs.Arr
        Mhs.Array
        Mhs.Builtin
        Mhs.MutArr
        Mhs.MutUArr
        Mhs.UArr
        Numeric
        Numeric.FormatFloat
        Numeric.Natural
        Prelude
        System.Cmd
        System.Console.GetOpt
        System.Compress
        System.Compress.ByteString
        System.CPUTime
        System.Directory
        System.Environment
        System.Exit
        System.IO
        System.IO.Error
        System.IO.MD5
        System.IO.PrintOrRun
        System.IO.Serialize
        System.IO.StringHandle
        System.IO.TimeMilli
        System.IO.Transducers
        System.IO.Unsafe
        System.Info
        System.Mem
        System.Mem.Weak
        System.Posix.Types
        System.Process
        System.RTS
        System.Timeout
        Text.Printf
        Text.ParserCombinators.ReadP
        Text.ParserCombinators.ReadPrec
        Text.Read
        Text.Read.Lex
        Text.Show
        Unsafe.Coerce

    other-modules:
        Control.Concurrent.STM.Internal
        Control.Concurrent.STM.Internal.Map
        Control.Concurrent.STM.Internal.Set
        Control.Concurrent.STM.Internal.TVar
        Control.Concurrent.STM.Internal.TransactionLog
        Control.Concurrent.STM.STMMonad
        Control.Exception.Internal
        Control.Exception.Internal.Map
        Control.Exception.Internal.Set
        Control.Exception.Internal.TVar
        Control.Exception.Internal.TransactionLog
        Control.Monad.ST_Type
        Data.Bits.Base
        Data.Bool_Type
        Data.ByteString.Builder.ASCII
        Data.ByteString.Builder.Internal
        Data.ByteString.Internal
        Data.ByteString.Lazy.Internal
        Data.Char_Type
        Data.Data_Class
        Data.Foldable.Internal
        Data.Functor.Const_Type
        Data.Int.IntN
        Data.Int.Instances
        Data.Integer.Internal
        Data.Integer_Type
        Data.List.NonEmpty_Type
        Data.Monoid.Internal
        Data.Ordering_Type
        Data.Orphans
        Data.List_Type
        Data.Maybe_Type
        Data.Ratio_Type
        Foreign.ForeignPtr_Type
        MiniPrelude
        Numeric.Read
        Numeric.Show
        Primitives
        System.IO.Base
        System.IO.Internal
        System.IO.Open
        System.IO_Handle
        Text.Read.Internal

    build-depends:

--library directory
--    exposed-modules:
--        System.Directory
--    build-depends:
--        base
