cabal-version:  3.0
name:           libs
version:        0.9.10.0
license:        Apache
license-file:   LICENSE
maintainer:     lennart@augustsson.net
synopsis:       Basic libraries
category:       Prelude
build-type:     Simple
description:
    This package contains the Standard Haskell "Prelude" and its support libraries,
    and a large collection of useful libraries ranging from data
    structures to parsing combinators and debugging utilities.

library base
    exposed-modules:
        Control.Applicative
        Control.DeepSeq
        Control.Error
        Control.Exception
        Control.Monad
        Control.Monad.Fail
        Control.Monad.ST
        Control.Monad.State.Strict
        Data.Bits
        Data.Bool
        Data.Bounded
        Data.Char
        Data.Complex
        Data.Constraint
        Data.Dynamic
        Data.Either
        Data.Enum
        Data.Eq
        Data.FloatW
        Data.Floating
        Data.Foldable
        Data.Fractional
        Data.Function
        Data.Functor
        Data.Functor.Const
        Data.Functor.Identity
        Data.IOArray
        Data.IORef
        Data.Int
        Data.Int.IntN
        Data.Int.Instances
        Data.Integer
        Data.Integral
        Data.Ix
        Data.List
        Data.Maybe
        Data.Monoid
        Data.Num
        Data.Ord
        Data.Proxy
        Data.Ratio
        Data.Real
        Data.RealFloat
        Data.RealFrac
        Data.Records
        Data.Semigroup
        Data.STRef
        Data.String
        Data.Traversable
        Data.Tuple
        Data.Typeable
        Data.TypeLits
        Data.Version
        Data.Void
        Data.Word
        Data.ZipList
        Debug.Trace
        Foreign.C.String
        Foreign.C.Types
        Foreign.ForeignPtr
        Foreign.Marshal.Alloc
        Foreign.Marshal.Array
        Foreign.Marshal.Utils
        Foreign.Ptr
        Foreign.Storable
        GHC.Stack
        GHC.Types
        Numeric
        Numeric.FormatFloat
        Numeric.Natural
        Prelude
        System.Environment
        System.Exit
        System.IO
        System.Info
        System.Process
        Text.Printf
        Text.Read
        Text.Show
        Unsafe.Coerce

    other-modules:
        Control.Exception.Internal
        Data.Bool_Type
        Data.Char_Type
        Data.Integer_Type
        Data.Ordering_Type
        Data.List_Type
        Data.Maybe_Type
        Data.Ratio_Type
        Primitives
        System.IO_Handle

library directory
    exposed-modules:
        System.Directory

library simple-readline
    exposed-modules:
        System.Console.SimpleReadline

library pretty
    exposed-modules:
        Text.PrettyPrint.HughesPJ
        Text.PrettyPrint.HughesPJClass

library mhs
    exposed-modules:
        System.IO.MD5
        System.IO.PrintOrRun
        System.IO.Serialize
        System.IO.TimeMilli

library containers
    exposed-modules:
        Data.IntMap
        Data.IntSet
        Data.Map
