cabal-version:  3.0
name:           libs
version:        0.9.15.0
license:        Apache
license-file:   LICENSE
maintainer:     lennart@augustsson.net
synopsis:       Basic libraries
category:       Prelude
build-type:     Simple
description:
    This package contains the Standard Haskell "Prelude" and its support libraries.

library base
    exposed-modules:
        Control.Applicative
        Control.Arrow
        Control.DeepSeq
        Control.Error
        Control.Exception
        Control.Monad
        Control.Monad.Fail
        Control.Monad.ST
        Data.Array
        Data.Bits
        Data.Bool
        Data.Bounded
        Data.ByteString
        Data.Char
        Data.Complex
        Data.Constraint
        Data.Double
        Data.Dynamic
        Data.Either
        Data.Enum
        Data.Eq
        Data.Float
        Data.FloatW
        Data.Floating
        Data.Foldable
        Data.Fractional
        Data.Function
        Data.Functor
        Data.Functor.Const
        Data.Functor.Identity
        Data.IOArray
        Data.IORef
        Data.Int
        Data.Integer
        Data.Integral
        Data.Ix
        Data.List
        Data.List.NonEmpty
        Data.Maybe
        Data.Monoid
        Data.Num
        Data.Ord
        Data.Proxy
        Data.Ratio
        Data.Real
        Data.RealFloat
        Data.RealFrac
        Data.Records
        Data.STRef
        Data.Semigroup
        Data.String
        Data.Time.Clock    -- XXX remove
        Data.Time.Format   -- XXX remove
        Data.Text
        Data.Traversable
        Data.Tuple
        Data.Type.Equality
        Data.TypeLits
        Data.Typeable
        Data.Version
        Data.Void
        Data.Word
        Data.ZipList
        Debug.Trace
        Foreign.C.String
        Foreign.C.Types
        Foreign.ForeignPtr
        Foreign.Marshal.Alloc
        Foreign.Marshal.Array
        Foreign.Marshal.Utils
        Foreign.Ptr
        Foreign.Storable
        GHC.Stack
        GHC.Types
        Numeric
        Numeric.FormatFloat
        Numeric.Natural
        Prelude
        System.Cmd
        System.Compress
        System.Directory
        System.Environment
        System.Exit
        System.IO
        System.IO.MD5
        System.IO.PrintOrRun
        System.IO.Serialize
        System.IO.TimeMilli
        System.IO.Unsafe
        System.Info
        System.Process
        Text.Printf
        Text.Read
        Text.Read.Lex
        Text.Read.Numeric
        Text.Show
        TimeCompat        -- XXX remove
        Unsafe.Coerce

    other-modules:
        Control.Exception.Internal
        Control.Monad.ST_Type
        Data.Bool_Type
        Data.Char_Type
        Data.Int.IntN
        Data.Int.Instances
        Data.Integer_Type
        Data.Ordering_Type
        Data.List_Type
        Data.Maybe_Type
        Data.Ratio_Type
        Primitives
        System.IO_Handle

    build-depends:

--library directory
--    exposed-modules:
--        System.Directory
--    build-depends:
--        base

--library mhs
--    exposed-modules:
--        System.IO.PrintOrRun
--        System.IO.Serialize
--        System.IO.TimeMilli
--    build-depends:
--        base
